GNOME Bugzilla – Bug 702493
account: Fix segfault on no permission to access accountservice.
Last modified: 2013-06-17 18:06:34 UTC
act_user can be NULL if permission denied, or account setup fails Mostly affects testing mode (--force-new-user).
Created attachment 247052 [details] [review] account: Fix segfault on no permission to access accountservice.
** (gnome-initial-setup:21158): WARNING **: Failed to create user: GDBus.Error:org.freedesktop.Accounts.Error.PermissionDenied: Not authorized Program received signal SIGSEGV, Segmentation fault. act_user_is_loaded (user=0x0) at act-user.c:1519 1519 return user->is_loaded; (gdb) bt
+ Trace 232082
Review of attachment 247052 [details] [review]: OK.
Thanks pushed: 4a1e102da88e27d4b9e63de728a6fb0a810ae9e6