account: Fix segfault on no permission to access accountservice.

act_user can be NULL if permission denied, or account setup fails
Mostly affects testing mode (--force-new-user).

https://bugzilla.gnome.org/show_bug.cgi?id=702493